--- a/themes/parsa-hugo/layouts/partials/footer.html
+++ b/themes/parsa-hugo/layouts/partials/footer.html
@@ -14,11 +14,14 @@
           {{ end }}
         </div>
         <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
-          {{ if or  .Site.Params.mobile  .Site.Params.email }}         
+          {{ if or  .Site.Params.tel .Site.Params.mobile  .Site.Params.email }}         
           <h6>Contact Info</h6>
           <ul class="list-unstyled">
+            {{ if .Site.Params.tel }}
+            <li class="font-secondary text-dark">Tel : {{ .Site.Params.tel | markdownify }}</li>
+            {{ end }}
             {{ if .Site.Params.mobile }}
-            <li class="font-secondary text-dark">Tel : {{ .Site.Params.mobile | markdownify }}</li>
+            <li class="font-secondary text-dark">Mobile : {{ .Site.Params.mobile | markdownify }}</li>
             {{ end }}
             {{ if .Site.Params.email }}           
             <li class="font-secondary text-dark">Email : {{ .Site.Params.email | markdownify }}</li>
