--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -6,7 +6,7 @@
     </form>
   </div>
   <div class="widget">
-    <h6 class="mb-4">LATEST POST</h6>
+    <h6 class="mb-4">最新的資訊</h6>
     {{ range first 3 ( where site.Pages "Type" "post") }}
     <div class="media mb-4">
       <div class="post-thumb-sm mr-3">
@@ -23,7 +23,7 @@
     {{ end }}
   </div>
   <div class="widget">
-    <h6 class="mb-4">TAG</h6>
+    <h6 class="mb-4">標籤</h6>
     {{- if isset site.Taxonomies "tags" }}
     {{- if not (eq (len site.Taxonomies.tags) 0) }}
     <ul class="list-inline tag-list">
@@ -35,7 +35,7 @@
     {{- end }}
   </div>
   <div class="widget">
-    <h6 class="mb-4">CATEGORIES</h6>
+    <h6 class="mb-4">分類</h6>
     {{- if isset site.Taxonomies "categories" }}
     {{- if not (eq (len site.Taxonomies.categories) 0) }}
     <ul class="list-inline tag-list">
