--- a/layouts/index.html
+++ b/layouts/index.html
@@ -57,6 +57,16 @@
 </section>
 {{ end }}
 
+<section class="section">
+    <div class="container">
+      <div class="row featured-post-slider">
+        <div class="col-lg-4 col-sm-6 mb-5">
+          <iframe width="320" height="240" src="https://www.youtube.com/embed/eyxaACleX8k?loop=1&playlist=eyxaACleX8k&mute=1&modestbranding=1" frameborder="10"  allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+</section>
+
 <!-- blog post -->
 <section class="section">
   <div class="container">
