新增 * 選單水費 自潛 課程超連結 * 自訂版本顯示

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,6 +7,8 @@
   <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ with site.Params.description }}{{ . }}{{ end }}{{ end }}">
   {{ with site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
   {{ hugo.Generator }}
+  
+  {{ with site.Params.Version }}<meta name="Version" content="{{ . }}">{{ end }}
 
   {{ "<!-- plugins -->" | safeHTML }}
   {{ range site.Params.plugins.css }}
